Release ...
* [nt]roff: A new type of traps is available: output-line traps. They are
  set with the new "\P" escape sequence and are invoked when the line that
  contains the corresponding sequence has been output.
* [nt]roff: The ".index" request has been added to determine the position
  of a string within a string or macro.
* [nt]roff: The sets of sentence-ending and transparent characters are
  now configurable with the ".sentchar" and ".transchar" requests.
* [nt]roff: The set of optional line break characters (normally hyphen
  and em dash) is now configurable with the ".breakchar" request.
* [nt]roff: The ".nhychar" request defines a set of hyphenation-
  inhibiting characters (as hyphen and em dash with traditional troff
  hyphenation).
* troff: The second argument to the ".ss" request now actually sets the
  size of the sentence-end space instead of just switching it on or off.
* [nt]roff: The ".unformat" and ".asciify" requests have been added to
  remove the effects of adjustment, and font and point size information,
  respectively, from a diversion.
* troff: The "\Yx", "\Y(xx", or "\Y[xxx]" escape sequence has been added
  to output the contents of the string or macro x, xx, or xxx, respectively,
  as a device control function.
* [nt]roff: The "\$0" escape sequence has been added to refer to the name
  of the current macro or string.
* nroff: The ".psbb" request has been made a no-op since nroff cannot
  otherwise handle EPS documents anyway.

Release 060716
* troff: The ".letadj" request has been added to enable dynamic letter
  spacing and letter reshaping when justifying lines.
* troff: Font and size attributes of space (and newline) characters in
  input are now honored for computing widths and kerning pairs. Previously,
  font and size of space characters were always that of the next printable
  character; this is retained with the -x0 option. This means that e.g. in
  "\f(CWabc \fRdef", the size of the space is now computed from the